Fix lottery detail modal view on small screens

--- a/src/webapp/src/client/styles/style/modules/_lotteries.less
+++ b/src/webapp/src/client/styles/style/modules/_lotteries.less
@@ -49,7 +49,8 @@
   margin:auto;
 }
 .lottery-detail-modal-form{
-  margin-left: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   .carousel-indicators{
     justify-content: center;
     align-items: center;
@@ -62,9 +63,6 @@
 
 .lotteries-detail-modal-ticket-counter{
   margin-left: 10px;
-}
-.lottery-detail-modal-total-cost{
-  margin-left: 55px;
 }
 .lottery-activity-log-count-lg {
     font-size: 20px;
@@ -179,15 +177,20 @@
     text-align: right;
 	.btn { margin-bottom: 0px; }
   }
-  .lottery-description{
-    padding-top: 20px;
-    border-top: 1px solid #e5e5e5;
-    margin-left: 10px;
-  }
+ .lottery-card{
+   position: relative;
+   border-top: 1px solid #e5e5e5;
+   padding-top: 3%;
+ }
   .lottery-end-date-component{
-    padding-left: 20px;
     margin-top: 75px;
     >label{
       margin-bottom: 0px; padding-bottom: 0px;
     }
+  }
+  .lottery-detail-modal-information{
+    padding-left: 17%;
+  }
+  .lottery-detail-modal-buy-tickets-button{
+    padding-top: 10%;
   }
